# PracticasED

Practica1/build-linear_ds/: .ninja_deps  .ninja_log  CMakeCache.txt  CTestTestfile.cmake  build.ninja  cmake_install.cmake  compile_commands.json  test_cdarray  test_iterator  test_list  test_list_node  test_queue  test_stack
Practica1/build-linear_ds/.cmake/api/v1/reply/: cache-v2-3d1d2ced9a3e216fc978.json  cache-v2-dcb943bbb58390753c8c.json  cmakeFiles-v1-2f57d8ae124f0ee05fb0.json  cmakeFiles-v1-7bb70a73ee2b39bd6f0b.json  codemodel-v2-58cf15cc42ff362fd74b.json  codemodel-v2-fd5487ad6a4f82d48a49.json  index-2026-02-23T16-19-38-0662.json  index-2026-02-26T10-35-04-0132.json  target-Python__Interpreter-Debug-9cac39e9d77d1f7aadd6.json  target-Python__InterpreterMultiConfig-Debug-0ffcb9093f8cf04f79ec.json  target-test_ListNode-Debug-7ebdefd03a89356fe3c8.json  target-test_ListNode-Debug-d75128f68bec255c76ea.json  target-test_cdarray-Debug-19ebfa540c71c7cebfb3.json  target-test_cdarray-Debug-e0ceb2556dc8329a1927.json  target-test_iterator-Debug-6efa4e19279ba20b6e63.json  target-test_iterator-Debug-e8fffd7bad31b4468a6c.json  target-test_list-Debug-0d9841d07d0956242b0e.json  target-test_list-Debug-699638fe9b0d3acf5f22.json  target-test_list_node-Debug-8199f5f2aa657530fe15.json  target-test_list_node-Debug-c4b142367f3ee8ec51bc.json  target-test_queue-Debug-e315179d446eb8affd45.json  target-test_queue-Debug-ec81ed98fabd58a4781b.json  target-test_stack-Debug-683cba04f237b0458027.json  target-test_stack-Debug-861f008a39889bebfe61.json
Practica1/build-linear_ds/Testing/: TAG
Practica1/build-linear_ds/Testing/20260223-1619/: Test.xml
Practica1/build-linear_ds/Testing/Temporary/: CTestCostData.txt
Practica1/linear_ds/: CHANGELOG.txt  CMakeLists.txt  DATES.json  DO_NOT_MODIFY.TXT  README.md  TESTS.json  cdarray.hpp  cdarray_imp.hpp  list.hpp  list_imp.hpp  list_iterator.hpp  list_iterator_imp.hpp  list_node.hpp  list_node_imp.hpp  queue.hpp  queue_imp.hpp  run_tests.py  stack.hpp  stack_imp.hpp  test_cdarray.cpp  test_list.cpp  test_list_node.cpp
Practica1/linear_ds/01_tests_cdarray/: 10
Practica1/linear_ds/02_tests_cdarray_fold_unfold/: 02
Practica1/linear_ds/04_tests_simple_list_node/: 01
